--- a/Meet/meet.html
+++ b/Meet/meet.html
@@ -10,38 +10,7 @@
   </head>  
   <body> 
 
-   <!-- Load Facebook SDK for JavaScript -->
-   <div id="fb-root"></div>
-   <script>
-     window.fbAsyncInit = function() {
-       FB.init({
-         xfbml            : true,
-         version          : 'v7.0'
-       });
-     };
-
-     (function(d, s, id) {
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) return;
-     js = d.createElement(s); js.id = id;
-     js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));</script>
-
-   <!-- Your Chat Plugin code -->
-   <div class="fb-customerchat"
-     attribution=setup_tool
-     page_id="1425373044379362"
-theme_color="#0084ff">
-   </div>
-    
-      <main>
-         <div class="top">
-           <div class="heading">
-          <br>
-          <p style="font-family:verdana">Meet the <b>team.</b></p>
-        </div>
-        </div> 
+   
         
 <section>
     <div class="sections">
@@ -149,5 +118,9 @@ theme_color="#0084ff">
 
     </main> 
    
+      <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/7667981.js"></script>
+  <!-- End of HubSpot Embed Code -->
+
   </body>
 </html>
