--- a/Meet/meet.html
+++ b/Meet/meet.html
@@ -28,13 +28,13 @@
     <div class="sections">
       
       <div class="section-info">
-        <a href="https://members.lbar.com/realtor/11729/mary_ann_morris" ><img src="./images/mmorris.jpg" alt="Mary Ann Morris" /></a>
-        <h1>Mary Ann Morris</h1>
+        <a href="https://members.lbar.com/realtor/11729/mary_ann_morris" ><img src="./images/download.jpg" alt="Bo Smith" /></a>
+        <h1>Bo Smith</h1>
         <p>
           Team Leader
         </p>
         <p>
-          <b>  maryannmorris@kw.com</b>
+          <b>bo.smith@kw.com</b>
         </p>
         </div>
       
